<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:id="@+id/imgView"
        android:background="@drawable/chavo"
        android:maxWidth="80dp"
        android:maxHeight="80dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagen"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/texName"
            android:id="@+id/txtView"
            android:layout_weight="0.20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/descripcion"
            android:id="@+id/txtVIew2"
            android:layout_weight="0.20" />

    </LinearLayout>

</LinearLayout>
